# mcp

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  servers.example.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-crate.yml  publish-homebrew.yml  release-beta.yml  release.yml
Formula/: mcp.rb
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
docs/: README.md  SUMMARY.md  getting-started.md  mcp-servers-are-draining-your-hardware.md  tutorial.md  why-mcp-cli.md  why-mcp-over-cli-for-teams.md
docs/guides/: audit-logging.md  authentication.md  cli-as-mcp.md  configuration.md  enterprise-token-management.md  observability.md  proxy-mode.md  registry.md  scripting.md
docs/howto/: docker.md  kubernetes.md  oauth-as.md  observability-quickstart.md  services.md  troubleshooting.md
docs/reference/: architecture.md  cli.md  config-file.md  environment-variables.md
src/: audit.rs  cache.rs  classifier.rs  classifier_cache.rs  cli_discovery.rs  client.rs  config.rs  db.rs  logging.rs  main.rs  manager.rs  output.rs  protocol.rs  registry.rs  serve.rs  spinner.rs  telemetry.rs
src/auth/: hints.rs  mod.rs  oauth.rs  oauth_primitives.rs  store.rs
src/cli/: acl.rs  completions.rs  config.rs  logs.rs  mod.rs  server.rs
src/serve/: discovery.rs  dispatch.rs  http.rs  mod.rs  proxy.rs  stdio.rs
src/server_auth/: acl.rs  mod.rs  providers.rs
src/server_auth/acl/: eval.rs  glob.rs  mod.rs  types.rs
src/server_auth/oauth_as/: authorize.rs  cidr.rs  config.rs  e2e_tests.rs  jwt.rs  metadata.rs  mod.rs  provider.rs  redirect_uri.rs  register.rs  state.rs  store.rs  test_helpers.rs  token.rs  types.rs
src/transport/: cli.rs  http.rs  mod.rs  stdio.rs
