[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
description = "CLI that turns MCP servers into terminal commands"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
anyhow = "1"
dirs = "6"
regex = "1"
async-trait = "0.1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
open = "5"
url = "2"
indicatif = "0.17"
comfy-table = "7"
console = "0.15"

[dev-dependencies]
tempfile = "3"
