[package]
name = "mcp"
version = "0.5.0"
edition = "2021"
description = "CLI that turns MCP servers into terminal commands"
authors = ["Thiago Avelino <avelinorun@gmail.com>"]
license = "MIT"
repository = "https://github.com/avelino/mcp"
homepage = "https://github.com/avelino/mcp"
readme = "README.md"
keywords = ["mcp", "model-context-protocol", "cli", "ai", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
anyhow = "1"
dirs = "6"
regex = "1"
async-trait = "0.1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
open = "5"
url = "2"
indicatif = "0.17"
comfy-table = "7"
console = "0.15"
axum = "0.8"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrondb = "0.2.3-dev.12298e3"
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1"
socket2 = { version = "0.6", features = ["all"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
