[package]
name = "mcp"
version = "0.5.2"
edition = "2021"
description = "CLI that turns MCP servers into terminal commands"
authors = ["Thiago Avelino <avelinorun@gmail.com>"]
license = "MIT"
repository = "https://github.com/avelino/mcp"
homepage = "https://github.com/avelino/mcp"
readme = "README.md"
keywords = ["mcp", "model-context-protocol", "cli", "ai", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "rustls",
  "form",
  "query",
] }
anyhow = "1"
dirs = "6"
regex = "1"
async-trait = "0.1"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
open = "5"
url = "2"
indicatif = "0.18"
comfy-table = "7"
console = "0.16"
axum = "0.8"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrondb = "0.2.3-dev.12298e3"
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1"
socket2 = { version = "0.6", features = ["all"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }

# OpenTelemetry — default-off, ativado via OTEL_EXPORTER_OTLP_ENDPOINT.
# Suporta gRPC (tonic) e HTTP/protobuf (reqwest) — operador escolhe via
# OTEL_EXPORTER_OTLP_PROTOCOL. Reqwest reutiliza nossa stack já existente.
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
  "rt-tokio",
  "trace",
  "metrics",
  # Required so the batch span processor runs on the tokio runtime (rather
  # than spawning its own thread, which can't drive reqwest futures).
  "experimental_trace_batch_span_processor_with_async_runtime",
  "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
  "trace",
  "metrics",
  "grpc-tonic",
  "http-proto",
  # `hyper-client` reuses the hyper 1.x stack axum 0.8 already pulls,
  # avoiding a second copy of reqwest in the binary.
  "hyper-client",
] }
tracing-opentelemetry = "0.32"

[dev-dependencies]
tempfile = "3"
